--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/nildajam/react-gifexpertapp.git",
   "name": "gif-expert-app",
   "version": "0.1.0",
   "private": true,
